--- a/templates/index.html
+++ b/templates/index.html
@@ -152,7 +152,7 @@
 
         // Send request to Azure Function
         try {
-            const response = await fetch('https://functionapptest04.azurewebsites.net/HttpTrigger1', {
+            const response = await fetch('/api/HttpTrigger1', {
                 method: 'POST',
                 headers: { 'Content-Type': 'application/json' },
                 body: JSON.stringify({ query })
